crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__unknown_library_produces_s120.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load fdsafdsafdsafdsa %}

Diagnostics (1)
1. UnknownLibrary: Unknown template tag library 'fdsafdsafdsafdsa'
    --> test.html:1:1
   1 | {% load fdsafdsafdsafdsa %}
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
