crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__unloaded_library_filter_produces_s112.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|apnumber }}

Diagnostics (1)
1. UnloadedFilter: Filter 'apnumber' requires {% load humanize %}
    --> test.html:1:10
   1 | {{ value|apnumber }}
     |          ^^^^^^^^
