crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__unloaded_library_tag_produces_s109.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% trans 'hello' %}

Diagnostics (1)
1. UnloadedTag: Tag 'trans' requires {% load i18n %}
    --> test.html:1:1
   1 | {% trans 'hello' %}
     | ^^^^^^^^^^^^^^^^^^^
