crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__verbatim_block_content_skipped.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% verbatim %}{% trans 'hello' %}{% endverbatim %}
   2 | {% if True %}{% endif %}

Diagnostics (0)
